Add ability to read from a text file publicly available on DropBox